Issues are resolved